# vtz

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  justfile
.github/workflows/: ci.yml
bench/: bench_vtz.cpp
docs/: vtz_a_guided_tour.md  vtz_tldr.md
etc/: bm_table_config.toml
etc/bench/: CMakeLists.txt  absl_helper.h  bench_common.h  bench_date_with_os_tzdb.cpp  bench_format.cpp  bench_locate_zone.cpp  bench_main.cpp  bench_parse.cpp  bench_tz_with_lookup.cpp  bench_vtz.cpp  bench_vtz_civil.cpp  bench_zones.h
etc/bench/src/: bench_date_with_os_tzdb.cpp  bench_parse.cpp  bench_tz_with_lookup.cpp  bench_vtz_civil.cpp
etc/data/: bench_2026-03-06T17:50:31-0500.json  bench_2026-03-09T14.52.12-0400.json
etc/date_util_example/: CMakeLists.txt
etc/docs/: vtz_a_guided_tour.md
etc/examples/: .clang-format  CMakeLists.txt  docgen.toml
etc/examples/src/: hello_vtz.cpp  vtz_a_guided_tour.cpp
etc/scripts/: civil.py  docgen.py  make_bm_table.py  seconds_to_datetime.py
etc/test/: .clang-format  CMakeLists.txt  test_civil.cpp  test_formatting.cpp  test_main.cpp  test_math.cpp  test_microfmt.cpp  test_tzfile.cpp  test_utils.h  test_versus_hinnant_tz.cpp  test_vtz.cpp  test_zones.h  vtz_debug.h  vtz_testing.h
etc/test/include/test_vtz/: context.h  paths.cpp  paths.h  test_main.cpp  utils.h  zones.cpp  zones.h  zones_test_suite.h
etc/test/standalone/: test_tzdb_load.cpp
etc/test/test_api/: test_format.cpp  test_helper.h  test_parse.cpp  test_tz_convert.cpp  test_vtz.cpp
etc/test/test_impl/: test_civil.cpp  test_formatting.cpp  test_math.cpp  test_microfmt.cpp  test_parsing.cpp  test_tzfile.cpp  test_utils.h  test_versus_hinnant_tz.cpp  test_vtz.cpp  test_zones.h  vtz_debug.h  vtz_testing.h
etc/test_api/: guard_page_buffer.cpp  guard_page_buffer.h  test_format.cpp  test_helper.h  test_parse.cpp  test_vtz.cpp
etc/test_api/src/: date.cpp
etc/tools/: dump_tzfile.cpp
examples/: CMakeLists.txt  docgen.toml
examples/src/: vtz_chrono.cpp  vtz_tldr.cpp  vtz_unix_time.cpp
include/api/vtz/: date.h  format.h  parse.h  types.h  tz.cpp  tz.h
include/api/vtz/impl/: bit.h  chrono_types.h  export.h  fix_str.h  format_impl.h  macros.h  math.h  tz_impl.h  tz_tables.h  zone_abbr.h
include/extras/vtz/: format.cpp  format.h  libfmt_compat.cpp  libfmt_compat.h
include/impl/vtz/: civil.h  current_zone.cpp  date_types.h  embedded_tzdb.cpp  embedded_tzdb.h  embedded_tzdb_content.h  endian.h  files.cpp  files.h  format.cpp  inplace_optional.h  known_zones.h  known_zones.h.in  parse.cpp  span.h  strings.cpp  strings.h  tz_cache.cpp  tz_cache.h  tz_impl.h  tz_reader.cpp  tz_reader.h  tzfile.h
include/impl/vtz/tz_reader/: FromUTC.h  RuleAt.h  RuleLetter.h  RuleOn.h  RuleSave.h  TZString.h  ZoneFormat.h  ZoneRule.h  ZoneState.h  ZoneTime.h  ZoneTransition.h  ZoneUntil.h  from_utc.h  leap_table.h  link.h  rule_at.h  rule_letter.h  rule_on.h  tz_string.h  zone_format.h  zone_rule.h  zone_save.h  zone_state.h  zone_time.h  zone_transition.h  zone_until.h
include/impl/vtz/util/: microfmt.h
include/vtz/: bit.h  civil.h  current_zone.cpp  date.h  date_types.h  dates.h  endian.h  export.h  files.cpp  files.h  format.cpp  inplace_optional.h  known_zones.h  known_zones.h.in  math.h  parse.cpp  span.h  strings.cpp  strings.h  tz.cpp  tz.h  tz_cache.cpp  tz_cache.h  tz_impl.h  tz_reader.cpp  tz_reader.h  tzfile.h  vtzdef.h
include/vtz/tz_reader/: FromUTC.h  LeapTable.h  Link.h  RuleAt.h  RuleLetter.h  RuleOn.h  RuleSave.h  TZString.h  ZoneFormat.h  ZoneRule.h  ZoneState.h  ZoneTime.h  ZoneTransition.h  ZoneUntil.h
test/: test_civil.cpp  test_formatting.cpp  test_math.cpp  test_parsing.cpp  test_tzfile.cpp  test_utils.h  test_versus_hinnant_tz.cpp  test_vtz.cpp  vtz_testing.h
